# ame-scheduler

./: Cargo.toml  README.md
migrate/: migrate_00001_create_tables.sql
src/: main.rs  rpc.rs
src/entities/: scheduled_event.rs
