[package]
name = "ame-scheduler"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Ame-Build/ame-scheduler.git"

[dependencies]
# runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0.89"
tracing = "0.1"
futures-util = "0.3.31"

# Data
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
toml = "0.8.19"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = "0.3.18"

# Bus
async-nats = "0.37.0"
ame-bus = { git = "https://github.com/Ame-Build/ame-bus.git", branch = "main" }

[dependencies.sea-orm]
version = "1.0.0-rc.5"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "debug-print",
    "with-uuid",
    "with-chrono",
    "postgres-array",
    "with-rust_decimal",
    "mock",
    "tests-cfg"
]